# magic-plot

./: README.md  magic_plot.py  pyproject.toml
