[project]
name = "magic-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "seaborn>=0.13.2",
    "smolagents>=1.22.0",
]
